Avoid horizontal scroll appearing due to missing word-break css rule on code elements inside paragraphs

--- a/_includes/styles.css
+++ b/_includes/styles.css
@@ -249,3 +249,7 @@ figure .image-caption {
     font-size: 0.8em;
     color: #5b616b;
 }
+
+p > code {
+    word-break: break-all;
+}
